--- a/index.html
+++ b/index.html
@@ -5,38 +5,40 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Movie Tickets</title>
+    <title>First Bank of Epicodus</title>
   </head>
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Make your selection to see your ticket price!</h1>
+        <h1>Give us all your money!</h1>
       </div>
-      <form id="ticket">
-        <div class="form-group">
-          <label for="age">Viewer Age</label>
-          <input id="age" class="form-control" type="text" />
-        </div>
-        <div class="form-group">
-          <label for="movie">Movies</label>
-          <select class="form-control" id="movie">
-            <option value="spy">Spy Movie</option>
-            <option value="horror">Horror Movie</option>
-            <option value="comedy">Comedy Movie</select>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="movie">Times</label>
-          <select class="form-control" id="time">
-            <option value="12">12:00 PM</option>
-            <option value="17">5:00 PM</option>
-            <option value="20">8:00 PM</option>
-            <option value="23">11:00 PM</option>
-          </select>
-        </div>
-        <button type="submit">Enter</button>
-      </form>
-      <div id=ticket-price>
+      <div id="new-user">
+        <form id="new-account">
+          <div class="form-group">
+            <label for="initial-amount">Initial Deposit</label>
+            <input id="initial-amount" class="form-control" type="text" />
+          </div>
+          <button type="submit">Enter</button>
+        </form>
+      </div>
+      <div id="accountmgmt">
+        <form id="deposit">
+          <div class="form-group">
+            <label for="add">Deposit amount</label>
+            <input id="add" class="form-control" type="text" />
+          </div>
+          <button type="submit">Enter</button>
+        </form>
+
+        <form id="withdraw">
+          <div class="form-group">
+            <label for="subtract">Withdraw Amount</label>
+            <input id="subtract" class="form-control" type="text" />
+          </div>
+          <button type="submit">Enter</button>
+        </form>
+
+        <div id="balance"></div>
       </div>
     </div>
   </body>
