--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <form id="new-account">
           <div class="form-group">
             <label for="initial-amount">Initial Deposit</label>
-            <input id="initial-amount" class="form-control" type="text" />
+            <input id="initial-amount" class="form-control" type="text" required pattern="[0-9]+"/>
+          </div>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input id="name" class="form-control" type="text" />
           </div>
           <button type="submit">Enter</button>
         </form>
@@ -25,15 +29,15 @@
         <form id="deposit">
           <div class="form-group">
             <label for="add">Deposit amount</label>
-            <input id="add" class="form-control" type="text" />
+            <input id="add" class="form-control" type="text" required pattern="[0-9]+"/>
           </div>
-          <button type="submit">Enter</button>
+          <button type="submit" >Enter</button>
         </form>
 
         <form id="withdraw">
           <div class="form-group">
             <label for="subtract">Withdraw Amount</label>
-            <input id="subtract" class="form-control" type="text" />
+            <input id="subtract" class="form-control" type="text" required pattern="[0-9]+"/>
           </div>
           <button type="submit">Enter</button>
         </form>
